[package]
name = "aprs-parser"
version = "0.4.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
description = "APRS message parser for Rust"
readme = "README.md"
keywords = ["aprs", "parser", "ogn"]
homepage = "https://github.com/Turbo87/aprs-parser-rs/"
repository = "https://github.com/Turbo87/aprs-parser-rs.git"
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]
rust-version = "1.60.0"

[dependencies]
thiserror = "1.0.51"

[dev-dependencies]
approx = "0.5.1"
